overflow-x corrected

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -25,7 +25,7 @@ header {
 
 main {
   @include main-margin-top;
-  overflow-x: auto;
+  overflow-x: clip;
 }
 
 section {
